# app/4clabs-server/internal/usecase/comics.go
@@ -8,10 +8,11 @@ import (
 
 type Comics struct {
 	ports.Comic
+	trade ports.Trade
 }
 
-func NewComics(comic ports.Comic) *Comics {
-	return &Comics{Comic: comic}
+func NewComics(comic ports.Comic, trade ports.Trade) *Comics {
+	return &Comics{Comic: comic, trade: trade}
 }
 
 func (c *Comics) List(ctx context.Context, userAddress string, limit uint32, nextScore int64) ([]entity.Comic, int64, uint32, bool, error) {
@@ -19,4 +20,16 @@ func (c *Comics) List(ctx context.Context, userAddress string, limit uint32, nex
 }
 func (c *Comics) Create(ctx context.Context, comic entity.Comic) error {
 	return c.Comic.Create(ctx, comic)
+}
+
+func (c *Comics) GetComicNftList(ctx context.Context, limit uint32, nextScore int64) ([]entity.ComicNft, int64, uint32, bool, error) {
+	return c.Comic.GetComicNfts(ctx, limit, nextScore)
+}
+
+func (c *Comics) NftPurchase(ctx context.Context, tokenId string, buyerAddress string) error {
+	return c.trade.NftPurchase(ctx, tokenId, buyerAddress)
+}
+
+func (c *Comics) GetComicNftListByComicId(ctx context.Context, id string, limit uint32, nextScore int64) ([]entity.ComicNft, int64, uint32, bool, error) {
+	return c.Comic.GetComicNftsByComicId(ctx, id, limit, nextScore)
 }
